--- a/week1HomeworkLab/html.html
+++ b/week1HomeworkLab/html.html
@@ -28,30 +28,33 @@
 		</div>
   </div>
  </div>
- <div class="container-fluid">
+
+ <div class="container-grid">
 	<div class="row">
-		<div class="col-md-4" id = "cell0"></div>
-		<div class="col-md-4" id = "cell1"></div>
-		<div class="col-md-4" id = "cell2"></div>
+		<div class="col-xs-4" id = "cell"></div>
+		<div class="col-xs-4" id = "cell"></div>
+		<div class="col-xs-4" id = "cell"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-4" id = "cell3"></div>
-		<div class="col-md-4" id = "cell4"></div>
-		<div class="col-md-4" id = "cell5"></div>
+		<div class="col-xs-4" id = "cell3"></div>
+		<div class="col-xs-4" id = "cell4"></div>
+		<div class="col-xs-4" id = "cell5"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-4" id = "cell6"></div>
-		<div class="col-md-4" id = "cell7"></div>
-		<div class="col-md-4" id = "cell8"></div>
+		<div class="col-xs-4" id = "cell6"></div>
+		<div class="col-xs-4" id = "cell7"></div>
+		<div class="col-xs-4" id = "cell8"></div>
 	</div>
 </div>
-<hr></hr>
+<div class = "breaker">
+</div>
 <footer>
 	<div class="container">
 		<div class="row text-center">
 			<button type="button" class="btn btn-default" id="button">Play again!</button>
 		</div>
 	</div>
+
 </footer>
 </body>
 <script src="javascript.js"></script>
