--- a/week1HomeworkLab/html.html
+++ b/week1HomeworkLab/html.html
@@ -31,9 +31,9 @@
 
  <div class="container-grid">
 	<div class="row">
-		<div class="col-xs-4" id = "cell"></div>
-		<div class="col-xs-4" id = "cell"></div>
-		<div class="col-xs-4" id = "cell"></div>
+		<div class="col-xs-4" id = "cell1"></div>
+		<div class="col-xs-4" id = "cell2"></div>
+		<div class="col-xs-4" id = "cell3"></div>
 	</div>
 	<div class="row">
 		<div class="col-xs-4" id = "cell3"></div>
